Bug 107485 nsPluginHostImpl's shutdown listener should be a weak reference patch by adu@sparc.spb.su r=dougt sr=darin