modules/plugin/base/src/nsPluginHostImpl.h
@@ -51,6 +51,7 @@
 #include "nsPluginsDir.h"
 #include "nsVoidArray.h"  // array for holding "active" streams
 #include "nsIDirectoryService.h"
+#include "nsWeakReference.h"
 #include "nsWeakPtr.h"
 
 class ns4xPlugin;
@@ -177,7 +178,8 @@ class nsPluginHostImpl : public nsIPluginManager2,
                          public nsIFileUtilities,
                          public nsICookieStorage,
                          public nsIObserver,
-                         public nsPIPluginHost
+                         public nsPIPluginHost,
+                         public nsSupportsWeakReference
 {
 public:
   nsPluginHostImpl();
